NetSci water bottle note
NetSci water bottle note

--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-27T16:46:04Z</date>
+						<date>2019-02-28T15:53:04Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -224,11 +224,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								b2AWfWrmSHY+
-								1l8EMa9uUg==
+								1i63zOCzdjJB
+								4gP/Q0TJRw==
 								</data>
 								<key>Size</key>
-								<integer>182119</integer>
+								<integer>184535</integer>
 							</dict>
 							<key>files/stacks_page_page52.js</key>
 							<dict>
@@ -244,11 +244,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								uQYEMR4k0dQk
-								x9Zt/CR+ew==
+								4ovNDbuyWE83
+								3n7YzYKdPA==
 								</data>
 								<key>Size</key>
-								<integer>109405</integer>
+								<integer>111720</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
