FN Satellite - link
FN Satellite - link

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -7774,7 +7774,7 @@
 					<key>page55 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-27T14:15:39Z</date>
+						<date>2019-02-28T16:50:16Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8143,11 +8143,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								UhXjW9kZT2bH
-								63EfZFXODw==
+								56L4pp9wuxti
+								W9aq3drBsQ==
 								</data>
 								<key>Size</key>
-								<integer>450377</integer>
+								<integer>450380</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -13428,7 +13428,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-28T15:53:04Z</date>
+						<date>2019-02-28T16:50:16Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -14467,8 +14467,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								FFZon8M8pYXO
-								AkqZDFioow==
+								5yTis51y/1sI
+								No3nfF8mTA==
 								</data>
 								<key>Size</key>
 								<integer>3711</integer>
@@ -14535,7 +14535,7 @@
 				LUJGRUQtRTZCOEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0
 				aWNpcGFudHMgSFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhE
 				NS0wNDgyLTQxMDItQTc3QS0xODU2RUYwOUZBRUXSOgs7
-				PFdOUy50aW1lI0HBFB2xjjwhgAvSPj9AQVokY2xhc3Nu
+				PFdOUy50aW1lI0HBFCRlOb17gAvSPj9AQVokY2xhc3Nu
 				YW1lWCRjbGFzc2VzVk5TRGF0ZaJAQlhOU09iamVjdNMJ
 				CgtERkihRYANoUeADoAPXxAtc2Z0cDovY21wbHhzeXMu
 				dzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5CNI+
@@ -14546,7 +14546,7 @@
 				LTQ5QzUtOTVGQi1EM0QyMkM3QkMxRjFfEDRQREYgRm9y
 				IFBhcnRpY2lwYW50cyBTT1MgU3ltcG9zaXVtIDIwMTgg
 				c2NoZWR1bGUucGRmXxAkN0E2RjlFQ0QtRkMyMi00ODg0
-				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcEUHbGOQYmA
+				LUI5MUUtNTdCOUE3NkRCMzEz0joLYTwjQcEUJGU5wF2A
 				C9MJCgtkZkihZYAXoUeADoAPXxAtc2Z0cDovY21wbHhz
 				eXMudzMudXZtLmVkdS93d3ctcm9vdC90ZW1wbGF0ZXJ5
 				0j4/a2xcTlNNdXRhYmxlU2V0o2ttQlVOU1NldNMJCgtv
