--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-27T14:15:39Z</date>
+						<date>2019-02-28T16:50:16Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -404,11 +404,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								UhXjW9kZT2bH
-								63EfZFXODw==
+								56L4pp9wuxti
+								W9aq3drBsQ==
 								</data>
 								<key>Size</key>
-								<integer>450377</integer>
+								<integer>450380</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
