Added space for a test
added space

--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/2-NetSci-Registration/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/2-NetSci-Registration/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-13T22:30:53Z</date>
+						<date>2019-03-01T16:48:16Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -104,11 +104,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								yrkMsW6nIgR+
-								83sTMxQ1HQ==
+								YCW2MYQTfpsE
+								hAhBwg7RDQ==
 								</data>
 								<key>Size</key>
-								<integer>132636</integer>
+								<integer>133810</integer>
 							</dict>
 							<key>files/stacks_page_page54.js</key>
 							<dict>
@@ -124,11 +124,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								9zF7wQ9C7T+s
-								ux31ZUlcbg==
+								yW2OE+0vVSWb
+								WK0WdlOCbw==
 								</data>
 								<key>Size</key>
-								<integer>61298</integer>
+								<integer>61876</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
