--- a/vermontcomplexsystems-foundation.rw/Pages/01-003Ci-class003D0022fa-fa-home-fa-2x0022003E003C002Fi003E/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/01-003Ci-class003D0022fa-fa-home-fa-2x0022003E003C002Fi003E/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-01T21:40:36Z</date>
+						<date>2019-03-01T16:48:16Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -44,8 +44,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								+PReEuWsTSxA
-								ou9Xxxuhsg==
+								nxwpy2JWw6to
+								pZKXpSmPFA==
 								</data>
 								<key>Size</key>
 								<integer>70020</integer>
