science olympiad schedule updated
science olympiad schedule updated

--- a/vermontcomplexsystems-foundation.rw8/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Contents.plist
@@ -8162,7 +8162,7 @@
 					<key>page56 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-14T15:59:13Z</date>
+						<date>2019-03-05T14:50:11Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8211,11 +8211,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								rrSp0WsGMB7h
-								TNv23npEJQ==
+								67fx1gTNJxmI
+								PeWRBM/JyA==
 								</data>
 								<key>Size</key>
-								<integer>178059</integer>
+								<integer>178135</integer>
 							</dict>
 							<key>files/stacks_page_page56.js</key>
 							<dict>
@@ -8231,11 +8231,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								KM256b2WCars
-								fF33T7XmBg==
+								zvcZsQRUZOfs
+								554ACK5Odw==
 								</data>
 								<key>Size</key>
-								<integer>89202</integer>
+								<integer>89638</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -10288,7 +10288,7 @@
 					<key>page67 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-01T21:40:36Z</date>
+						<date>2019-03-05T14:50:11Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -10337,11 +10337,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								2uMg7dSpLJak
-								6U5JvXELhA==
+								TmTxI8IwRyvG
+								n/+FkAJz5w==
 								</data>
 								<key>Size</key>
-								<integer>122145</integer>
+								<integer>121642</integer>
 							</dict>
 							<key>files/stacks_page_page67.js</key>
 							<dict>
@@ -10357,11 +10357,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Eu3YBSr9oChP
-								PLtp04trOw==
+								tg6AFGh4FoLB
+								2FVm6l/x9Q==
 								</data>
 								<key>Size</key>
-								<integer>51211</integer>
+								<integer>51251</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -11278,7 +11278,7 @@
 					<key>page71 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-03-01T15:45:44Z</date>
+						<date>2019-03-05T14:47:52Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -11292,6 +11292,16 @@
 								</data>
 								<key>Size</key>
 								<integer>15641164</integer>
+							</dict>
+							<key>files/stacks-image-02d25fd.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								hu+2ielXdG8l
+								Z+DLJqvmWA==
+								</data>
+								<key>Size</key>
+								<integer>125110</integer>
 							</dict>
 							<key>files/stacks-image-0e16e70.png</key>
 							<dict>
@@ -11603,16 +11613,6 @@
 								<key>Size</key>
 								<integer>218939</integer>
 							</dict>
-							<key>files/stacks-image-ce0fd87.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								nTDBASil1Oip
-								SfB6nYYl/Q==
-								</data>
-								<key>Size</key>
-								<integer>103694</integer>
-							</dict>
 							<key>files/stacks-image-d0bd460.png</key>
 							<dict>
 								<key>Digest</key>
@@ -11622,16 +11622,6 @@
 								</data>
 								<key>Size</key>
 								<integer>163226</integer>
-							</dict>
-							<key>files/stacks-image-e00fac2.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								cBJYBm7ksJwM
-								JPOcUWiLkQ==
-								</data>
-								<key>Size</key>
-								<integer>79833</integer>
 							</dict>
 							<key>files/stacks-image-f68f88f.png</key>
 							<dict>
@@ -11667,11 +11657,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								wqnxrpJTMVhB
-								gRGBrSnU7Q==
+								OsyH32XoClA6
+								bCPJ9Rsy+w==
 								</data>
 								<key>Size</key>
-								<integer>68839</integer>
+								<integer>68780</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -13368,7 +13358,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-03-04T17:00:06Z</date>
+						<date>2019-03-05T14:50:11Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -13397,11 +13387,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								GgBKZb95py6y
-								QYnugtiuOw==
+								1CGmx3U9OjIY
+								6OgJI+SQUg==
 								</data>
 								<key>Size</key>
-								<integer>5354</integer>
+								<integer>5386</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -13480,7 +13470,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-03-04T17:00:06Z</date>
+						<date>2019-03-05T14:50:11Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -14519,11 +14509,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								0lj76HcCkfr7
-								u1c48hvw7A==
+								wqRpcj+vKdTR
+								bWYiMPs4pA==
 								</data>
 								<key>Size</key>
-								<integer>3711</integer>
+								<integer>4562</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -14647,7 +14637,7 @@
 				RDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0aWNpcGFu
 				dHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVkdWxlLnBk
 				Zl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFFLTU3QjlB
-				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcEWyI0CpDyADNIe
+				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcEXYhKYHiaADNIe
 				H0dIVk5TRGF0ZaJHI9MJCgtKTE6hS4AOoU2AD4AQXxAt
 				c2Z0cDovY21wbHhzeXMudzMudXZtLmVkdS93d3ctcm9v
 				dC90ZW1wbGF0ZXJ5CNIeH1JTXxATTlNNdXRhYmxlRGlj
@@ -14657,14 +14647,14 @@
 				FoAVXxAkMkU4QzdEREMtQUVCNC00MUZCLUJGRUQtRTZC
 				OEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0aWNpcGFudHMg
 				SFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhENS0wNDgyLTQx
-				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwRbIjQKl
-				QIAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
+				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwRdiEpge
+				tIAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
 				eHN5cy53My51dm0uZWR1L3d3dy1yb290L3RlbXBsYXRl
 				cnnaLS4LLzAxEzIzNDVzNxYWd3h5ensIgCCAEYAAgACA
 				HoAbgBqAHYAcXxAkMzExQ0JERDItOTJCNy00MDE4LUIw
 				OTgtNDhGMjhFMEQwOUFGXxAcb2N0b3B1c19pY29uX3Ry
 				YW5zcGFyZW50LnBuZ18QJDAzQTRDMzNCLTY2NjAtNDMx
-				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBFsiNAqX4
+				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBF2ISmB7m
 				gAzTCQoLg4VOoYSAH6FNgA+AEF8QLXNmdHA6L2NtcGx4
 				c3lzLnczLnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVy
 				eV8Qbi92YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19w
@@ -14674,7 +14664,7 @@
 				kpOUCIAogBGAAIAAgCaAI4AigCWAJF8QJEVCN0EwMEJB
 				LTI0RTMtNDY4Qi1CNDU2LTlDMjM3QjgwRDBFQ1tmYXZp
 				Y29uLmljb18QJEE1NDVEMzc1LTFCNkItNEU5My1CQjU3
-				LTEyNEY1NzEyMEZFMtJDC5lFI0HBFsiNAqYzgAzTCQoL
+				LTEyNEY1NzEyMEZFMtJDC5lFI0HBF2ISmB8IgAzTCQoL
 				nJ5OoZ2AJ6FNgA+AEF8QLXNmdHA6L2NtcGx4c3lzLncz
 				LnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVyeV8QXS92
 				YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19wMGxteGI3
@@ -14684,7 +14674,7 @@
 				ECQ0MTExRkI1Mi1BMjJBLTRENjUtODY5Mi1CRTYzMEU2
 				RENBNkNfEBRhcHBsZS10b3VjaC1pY29uLnBuZ18QJEFC
 				NTBGRDUyLUE1NEUtNEYyMi05OTRELUUxNUE3RUYyMjRB
-				MtJDC7JFI0HBFsiNAqZMgAzTCQoLtbdOobaAL6FNgA+A
+				MtJDC7JFI0HBF2ISmB8qgAzTCQoLtbdOobaAL6FNgA+A
 				EF8QLXNmdHA6L2NtcGx4c3lzLnczLnV2bS5lZHUvd3d3
 				LXJvb3QvdGVtcGxhdGVyeV8QZi92YXIvZm9sZGVycy82
 				Ni9oX252bng0OTVmc19wMGxteGI3Z3RwcDQwMDAwZ3Ev
