--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/4-NetSci-Calls/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/4-NetSci-Calls/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-14T15:59:13Z</date>
+						<date>2019-03-05T14:50:11Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -84,11 +84,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								rrSp0WsGMB7h
-								TNv23npEJQ==
+								67fx1gTNJxmI
+								PeWRBM/JyA==
 								</data>
 								<key>Size</key>
-								<integer>178059</integer>
+								<integer>178135</integer>
 							</dict>
 							<key>files/stacks_page_page56.js</key>
 							<dict>
@@ -104,11 +104,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								KM256b2WCars
-								fF33T7XmBg==
+								zvcZsQRUZOfs
+								554ACK5Odw==
 								</data>
 								<key>Size</key>
-								<integer>89202</integer>
+								<integer>89638</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
