--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/4-NetSci-Calls/ChildPages/3-Call-for-Visualization-Prize/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/4-NetSci-Calls/ChildPages/3-Call-for-Visualization-Prize/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-02-01T21:40:36Z</date>
+						<date>2019-03-05T14:50:11Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -84,11 +84,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								2uMg7dSpLJak
-								6U5JvXELhA==
+								TmTxI8IwRyvG
+								n/+FkAJz5w==
 								</data>
 								<key>Size</key>
-								<integer>122145</integer>
+								<integer>121642</integer>
 							</dict>
 							<key>files/stacks_page_page67.js</key>
 							<dict>
@@ -104,11 +104,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Eu3YBSr9oChP
-								PLtp04trOw==
+								tg6AFGh4FoLB
+								2FVm6l/x9Q==
 								</data>
 								<key>Size</key>
-								<integer>51211</integer>
+								<integer>51251</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
