added brain hackathon
added brain hackathon

--- a/vermontcomplexsystems-foundation.rw8/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Contents.plist
@@ -7746,7 +7746,7 @@
 					<key>page55 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-03-04T17:00:06Z</date>
+						<date>2019-03-05T15:02:22Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8125,31 +8125,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								NwDhFiBvd20B
-								PqMYgweUkw==
+								yN2DFRmhySWx
+								DUVzsy4MJA==
 								</data>
 								<key>Size</key>
-								<integer>588520</integer>
+								<integer>592894</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								GmGNlOG/rpRL
-								KyvDm3PGPg==
+								GFSwqX00hHEe
+								zQeEVo+cPw==
 								</data>
 								<key>Size</key>
-								<integer>41131</integer>
+								<integer>41313</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								cphZ12WK0vK6
-								5hWAve52GQ==
+								KUktwxc8w3dE
+								Rhm6YJHyPw==
 								</data>
 								<key>Size</key>
-								<integer>451133</integer>
+								<integer>454899</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -13358,7 +13358,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-03-05T14:50:11Z</date>
+						<date>2019-03-05T15:02:22Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -13387,8 +13387,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								1CGmx3U9OjIY
-								6OgJI+SQUg==
+								pOjVOH9Q0s7l
+								HdaBOuSSig==
 								</data>
 								<key>Size</key>
 								<integer>5386</integer>
@@ -13470,7 +13470,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-03-05T14:50:11Z</date>
+						<date>2019-03-05T15:02:22Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -14509,8 +14509,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								wqRpcj+vKdTR
-								bWYiMPs4pA==
+								yrNZFoKldGN0
+								BAidGRthBQ==
 								</data>
 								<key>Size</key>
 								<integer>4562</integer>
@@ -14637,7 +14637,7 @@
 				RDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0aWNpcGFu
 				dHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVkdWxlLnBk
 				Zl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFFLTU3QjlB
-				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcEXYhKYHiaADNIe
+				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcEXY4ArENyADNIe
 				H0dIVk5TRGF0ZaJHI9MJCgtKTE6hS4AOoU2AD4AQXxAt
 				c2Z0cDovY21wbHhzeXMudzMudXZtLmVkdS93d3ctcm9v
 				dC90ZW1wbGF0ZXJ5CNIeH1JTXxATTlNNdXRhYmxlRGlj
@@ -14647,14 +14647,14 @@
 				FoAVXxAkMkU4QzdEREMtQUVCNC00MUZCLUJGRUQtRTZC
 				OEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0aWNpcGFudHMg
 				SFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhENS0wNDgyLTQx
-				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwRdiEpge
-				tIAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
+				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwRdjgCsR
+				c4AM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
 				eHN5cy53My51dm0uZWR1L3d3dy1yb290L3RlbXBsYXRl
 				cnnaLS4LLzAxEzIzNDVzNxYWd3h5ensIgCCAEYAAgACA
 				HoAbgBqAHYAcXxAkMzExQ0JERDItOTJCNy00MDE4LUIw
 				OTgtNDhGMjhFMEQwOUFGXxAcb2N0b3B1c19pY29uX3Ry
 				YW5zcGFyZW50LnBuZ18QJDAzQTRDMzNCLTY2NjAtNDMx
-				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBF2ISmB7m
+				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBF2OAKxGu
 				gAzTCQoLg4VOoYSAH6FNgA+AEF8QLXNmdHA6L2NtcGx4
 				c3lzLnczLnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVy
 				eV8Qbi92YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19w
@@ -14664,7 +14664,7 @@
 				kpOUCIAogBGAAIAAgCaAI4AigCWAJF8QJEVCN0EwMEJB
 				LTI0RTMtNDY4Qi1CNDU2LTlDMjM3QjgwRDBFQ1tmYXZp
 				Y29uLmljb18QJEE1NDVEMzc1LTFCNkItNEU5My1CQjU3
-				LTEyNEY1NzEyMEZFMtJDC5lFI0HBF2ISmB8IgAzTCQoL
+				LTEyNEY1NzEyMEZFMtJDC5lFI0HBF2OAKxHYgAzTCQoL
 				nJ5OoZ2AJ6FNgA+AEF8QLXNmdHA6L2NtcGx4c3lzLncz
 				LnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVyeV8QXS92
 				YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19wMGxteGI3
@@ -14674,7 +14674,7 @@
 				ECQ0MTExRkI1Mi1BMjJBLTRENjUtODY5Mi1CRTYzMEU2
 				RENBNkNfEBRhcHBsZS10b3VjaC1pY29uLnBuZ18QJEFC
 				NTBGRDUyLUE1NEUtNEYyMi05OTRELUUxNUE3RUYyMjRB
-				MtJDC7JFI0HBF2ISmB8qgAzTCQoLtbdOobaAL6FNgA+A
+				MtJDC7JFI0HBF2OAKxH5gAzTCQoLtbdOobaAL6FNgA+A
 				EF8QLXNmdHA6L2NtcGx4c3lzLnczLnV2bS5lZHUvd3d3
 				LXJvb3QvdGVtcGxhdGVyeV8QZi92YXIvZm9sZGVycy82
 				Ni9oX252bng0OTVmc19wMGxteGI3Z3RwcDQwMDAwZ3Ev
