--- a/vermontcomplexsystems-foundation.rw8/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Contents.plist
@@ -11278,7 +11278,7 @@
 					<key>page71 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-03-05T21:39:53Z</date>
+						<date>2019-03-05T21:49:54Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -11342,16 +11342,6 @@
 								</data>
 								<key>Size</key>
 								<integer>170207</integer>
-							</dict>
-							<key>files/stacks-image-2613889.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								KN0GJ5lR11Zo
-								2mhSrfrQaQ==
-								</data>
-								<key>Size</key>
-								<integer>144259</integer>
 							</dict>
 							<key>files/stacks-image-2871e45.png</key>
 							<dict>
@@ -11623,6 +11613,16 @@
 								<key>Size</key>
 								<integer>163226</integer>
 							</dict>
+							<key>files/stacks-image-d8a947b.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								eSJGXwvm/Mpd
+								u/PHR6UqEQ==
+								</data>
+								<key>Size</key>
+								<integer>107689</integer>
+							</dict>
 							<key>files/stacks-image-f68f88f.png</key>
 							<dict>
 								<key>Digest</key>
@@ -11657,8 +11657,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								7FiILENZxjgQ
-								4RDYTRDu6g==
+								P3X3AAGXDbRB
+								NLQ6LJe8Pw==
 								</data>
 								<key>Size</key>
 								<integer>68780</integer>
@@ -13696,7 +13696,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-03-05T21:42:12Z</date>
+						<date>2019-03-05T21:49:54Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -14735,11 +14735,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								MdFYzElSXkMo
-								NFzbmq16VQ==
+								7PJCgnlUXJI+
+								pxUtYZyliA==
 								</data>
 								<key>Size</key>
-								<integer>3785</integer>
+								<integer>3711</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -14883,7 +14883,7 @@
 				RDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0aWNpcGFu
 				dHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVkdWxlLnBk
 				Zl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFFLTU3QjlB
-				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcEXklt48vGADNIe
+				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcEXk0JhI1eADNIe
 				H0dIVk5TRGF0ZaJHI9MJCgtKTE6hS4AOoU2AD4AQXxAt
 				c2Z0cDovY21wbHhzeXMudzMudXZtLmVkdS93d3ctcm9v
 				dC90ZW1wbGF0ZXJ5CNIeH1JTXxATTlNNdXRhYmxlRGlj
@@ -14893,14 +14893,14 @@
 				FoAVXxAkMkU4QzdEREMtQUVCNC00MUZCLUJGRUQtRTZC
 				OEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0aWNpcGFudHMg
 				SFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhENS0wNDgyLTQx
-				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwReSW3jz
-				oYAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
+				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwReTQmEk
+				MYAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
 				eHN5cy53My51dm0uZWR1L3d3dy1yb290L3RlbXBsYXRl
 				cnnaLS4LLzAxEzIzNDVzNxYWd3h5ensIgCCAEYAAgACA
 				HoAbgBqAHYAcXxAkMzExQ0JERDItOTJCNy00MDE4LUIw
 				OTgtNDhGMjhFMEQwOUFGXxAcb2N0b3B1c19pY29uX3Ry
 				YW5zcGFyZW50LnBuZ18QJDAzQTRDMzNCLTY2NjAtNDMx
-				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBF5JbePPk
+				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBF5NCYSRs
 				gAzTCQoLg4VOoYSAH6FNgA+AEF8QLXNmdHA6L2NtcGx4
 				c3lzLnczLnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVy
 				eV8Qbi92YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19w
@@ -14910,7 +14910,7 @@
 				kpOUCIAogBGAAIAAgCaAI4AigCWAJF8QJEVCN0EwMEJB
 				LTI0RTMtNDY4Qi1CNDU2LTlDMjM3QjgwRDBFQ1tmYXZp
 				Y29uLmljb18QJEE1NDVEMzc1LTFCNkItNEU5My1CQjU3
-				LTEyNEY1NzEyMEZFMtJDC5lFI0HBF5JbePQOgAzTCQoL
+				LTEyNEY1NzEyMEZFMtJDC5lFI0HBF5NCYSSWgAzTCQoL
 				nJ5OoZ2AJ6FNgA+AEF8QLXNmdHA6L2NtcGx4c3lzLncz
 				LnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVyeV8QXS92
 				YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19wMGxteGI3
@@ -14920,7 +14920,7 @@
 				ECQ0MTExRkI1Mi1BMjJBLTRENjUtODY5Mi1CRTYzMEU2
 				RENBNkNfEBRhcHBsZS10b3VjaC1pY29uLnBuZ18QJEFC
 				NTBGRDUyLUE1NEUtNEYyMi05OTRELUUxNUE3RUYyMjRB
-				MtJDC7JFI0HBF5JbePQwgAzTCQoLtbdOobaAL6FNgA+A
+				MtJDC7JFI0HBF5NCYSTIgAzTCQoLtbdOobaAL6FNgA+A
 				EF8QLXNmdHA6L2NtcGx4c3lzLnczLnV2bS5lZHUvd3d3
 				LXJvb3QvdGVtcGxhdGVyeV8QZi92YXIvZm9sZGVycy82
 				Ni9oX252bng0OTVmc19wMGxteGI3Z3RwcDQwMDAwZ3Ev
