--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-03-05T21:33:34Z</date>
+						<date>2019-03-06T14:59:10Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -224,11 +224,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								RbZ93AcuQ1AN
-								jmAAAhCMXg==
+								gDq5HpgWlOkH
+								Zb7XX0tTgA==
 								</data>
 								<key>Size</key>
-								<integer>184535</integer>
+								<integer>184991</integer>
 							</dict>
 							<key>files/stacks_page_page52.js</key>
 							<dict>
@@ -244,11 +244,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								YD1HMf3YXlPM
-								UY0wCkd/Bw==
+								2tjYQKFDKG2c
+								b6Eh3aRGQQ==
 								</data>
 								<key>Size</key>
-								<integer>112029</integer>
+								<integer>122452</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
