--- a/vermontcomplexsystems-foundation.rw8/RWUIState.plist
+++ b/vermontcomplexsystems-foundation.rw8/RWUIState.plist
@@ -5,6 +5,7 @@
 	<key>expandedItems</key>
 	<array>
 		<string>page16</string>
+		<string>page53</string>
 	</array>
 	<key>pageInspectorVisible</key>
 	<true/>
@@ -12,9 +13,11 @@
 	<true/>
 	<key>projectViewWidth</key>
 	<real>228</real>
+	<key>selectedInspectorTab</key>
+	<string>pageSettings</string>
 	<key>selectedItems</key>
 	<array>
-		<string>page71</string>
+		<string>page52</string>
 	</array>
 	<key>selectedMode</key>
 	<integer>0</integer>
